struckdown/tests/snapshots/test_snapshots__html@footnotes.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/footnotes.md
---
<p>This is text with<sup class=footnote-reference><a href="#footnote">1</a></sup> a footnote.</p>
<div id="footnote"><p>This is the footnote.</p>
</div>

