struckdown/tests/snapshots/test_snapshots__html@frontmatter.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/frontmatter.md
---
<h1>Title goes here</h1>
<p>Text goes here</p>

