struckdown/tests/snapshots/test_snapshots__html@headings.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/headings.md
---
<h1 id="id-one"><code>One</code></h1>
<h2 id="id-two">Two</h2>
<h3 id="id-three"><em>Three</em></h3>
<h4>Four</h4>
<h5>Five</h5>
<h6>Six</h6>
<p>####### Seven</p>

