struckdown/tests/snapshots/test_snapshots__html@hello.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/hello.md
---
<h1>Hello World!</h1>
<p>This is a very basic example with <em>emphasis</em> and <em>the other emphasis</em>.</p>

