struckdown/tests/snapshots/test_snapshots__html@html.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/html.md
---
<p>This document has some inline html:</p>
<div class=foo>
  bar
</div>
<p>And this has some mixed markdown:</p>
<div class=foo>
<p><em>markdown here</em></p>
</div>
