struckdown/tests/snapshots/test_snapshots__html@role.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/role.md
---
<p>This shows the use of <span class="role-role">roles</span> and <span class="role-role">roles</span>.</p>
<p>Contrast this {with} <code>just some code</code>.</p>
<pre><code class="lang-python">print(&quot;Hello World&quot;)
</code></pre>
<p>But this is a role:</p>
<div class="directive-role"><pre>Hello
</pre></div><p>Stuff
Bar<br>
Baz</p>

