struckdown/tests/snapshots/test_snapshots__parser@ext_autoanchors.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: events
input_file: struckdown/tests/inputs/ext_autoanchors.md
---
- - type: document_start
    front_matter:
      processors:
        - processor: auto_anchors
  - offset: 0
    len: 49
    line: 1
    column: 0
- - type: start_tag
    tag: heading1
    attrs:
      id: heading-1
  - offset: 0
    len: 12
    line: 1
    column: 0
- - type: text
    text: Heading 1
  - offset: 2
    len: 9
    line: 1
    column: 2
- - type: end_tag
    tag: heading1
  - offset: 0
    len: 12
    line: 1
    column: 0
- - type: start_tag
    tag: paragraph
  - offset: 13
    len: 7
    line: 3
    column: 0
- - type: text
    text: Text 1
  - offset: 13
    len: 6
    line: 3
    column: 0
- - type: end_tag
    tag: paragraph
  - offset: 13
    len: 7
    line: 3
    column: 0
- - type: start_tag
    tag: heading1
    attrs:
      id: manual-id
  - offset: 21
    len: 25
    line: 5
    column: 0
- - type: text
    text: Heading 2
  - offset: 23
    len: 9
    line: 5
    column: 2
- - type: end_tag
    tag: heading1
  - offset: 21
    len: 25
    line: 5
    column: 0
- - type: start_tag
    tag: paragraph
  - offset: 47
    len: 7
    line: 7
    column: 0
- - type: text
    text: Text 2
  - offset: 47
    len: 6
    line: 7
    column: 0
- - type: end_tag
    tag: paragraph
  - offset: 47
    len: 7
    line: 7
    column: 0
- - type: start_tag
    tag: heading1
    attrs:
      id: heading-3
  - offset: 55
    len: 12
    line: 9
    column: 0
- - type: text
    text: Heading 3
  - offset: 57
    len: 9
    line: 9
    column: 2
- - type: end_tag
    tag: heading1
  - offset: 55
    len: 12
    line: 9
    column: 0
- - type: start_tag
    tag: paragraph
  - offset: 68
    len: 7
    line: 11
    column: 0
- - type: text
    text: Text 3
  - offset: 68
    len: 6
    line: 11
    column: 0
- - type: end_tag
    tag: paragraph
  - offset: 68
    len: 7
    line: 11
    column: 0
