struckdown/tests/snapshots/test_snapshots__parser@ext_autoanchors_max_level.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: events
input_file: struckdown/tests/inputs/ext_autoanchors_max_level.md
---
- - type: document_start
    front_matter:
      processors:
        - processor: AutoAnchors
          max_level: 1
  - offset: 0
    len: 65
    line: 1
    column: 0
- - type: start_tag
    tag: heading1
    attrs:
      id: heading-1
  - offset: 0
    len: 12
    line: 1
    column: 0
- - type: text
    text: Heading 1
  - offset: 2
    len: 9
    line: 1
    column: 2
- - type: end_tag
    tag: heading1
  - offset: 0
    len: 12
    line: 1
    column: 0
- - type: start_tag
    tag: paragraph
  - offset: 13
    len: 7
    line: 3
    column: 0
- - type: text
    text: Text 1
  - offset: 13
    len: 6
    line: 3
    column: 0
- - type: end_tag
    tag: paragraph
  - offset: 13
    len: 7
    line: 3
    column: 0
- - type: start_tag
    tag: heading2
    attrs:
      id: manual-id
  - offset: 21
    len: 26
    line: 5
    column: 0
- - type: text
    text: Heading 2
  - offset: 24
    len: 9
    line: 5
    column: 3
- - type: end_tag
    tag: heading2
  - offset: 21
    len: 26
    line: 5
    column: 0
- - type: start_tag
    tag: paragraph
  - offset: 48
    len: 7
    line: 7
    column: 0
- - type: text
    text: Text 2
  - offset: 48
    len: 6
    line: 7
    column: 0
- - type: end_tag
    tag: paragraph
  - offset: 48
    len: 7
    line: 7
    column: 0
- - type: start_tag
    tag: heading3
  - offset: 56
    len: 14
    line: 9
    column: 0
- - type: text
    text: Heading 3
  - offset: 60
    len: 9
    line: 9
    column: 4
- - type: end_tag
    tag: heading3
  - offset: 56
    len: 14
    line: 9
    column: 0
- - type: start_tag
    tag: paragraph
  - offset: 71
    len: 7
    line: 11
    column: 0
- - type: text
    text: Text 3
  - offset: 71
    len: 6
    line: 11
    column: 0
- - type: end_tag
    tag: paragraph
  - offset: 71
    len: 7
    line: 11
    column: 0
